syntax = "proto3";

package ursa.block.v1;

option go_package = "github.com/UrsaLab/u-engine/pb;pbursa";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message Block {
  oneof message {
    BlockData data = 1;
    UndoSignal undo = 2;
  }
}

message BlockData {
  Clock clock = 1;
  string cursor = 2;
  google.protobuf.Any payload = 3;
}

message UndoSignal {
  BlockRef last_valid_block = 1;
  string last_valid_cursor = 2;
}

message BlockRef {
  string id = 1;
  uint64 number = 2;
}

message Clock {
  string id = 1;
  uint64 number = 2;
  google.protobuf.Timestamp timestamp = 3;
}
